--- a/src/static/cssStyle/iconfont.css
+++ b/src/static/cssStyle/iconfont.css
@@ -1,35 +1,39 @@
 @font-face {
-    font-family: "iconfont";
-    /* Project id 4467735 */
-    src: url('//at.alicdn.com/t/c/font_4467735_vv8mewud7f.woff2?t=1710684699780') format('woff2'),
-        url('//at.alicdn.com/t/c/font_4467735_vv8mewud7f.woff?t=1710684699780') format('woff'),
-        url('//at.alicdn.com/t/c/font_4467735_vv8mewud7f.ttf?t=1710684699780') format('truetype');
+  font-family: "iconfont";
+  /* Project id 4467735 */
+  src: url('//at.alicdn.com/t/c/font_4467735_w6ta2ar64u.woff2?t=1711010334925') format('woff2'),
+    url('//at.alicdn.com/t/c/font_4467735_w6ta2ar64u.woff?t=1711010334925') format('woff'),
+    url('//at.alicdn.com/t/c/font_4467735_w6ta2ar64u.ttf?t=1711010334925') format('truetype');
 }
 
 .iconfont {
-    font-family: "iconfont" !important;
-    font-size: 16px;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: "iconfont" !important;
+  font-size: 16px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-QQ:before {
-    content: "\e882";
+.icon-goldcup:before {
+  content: "\e621";
 }
 
-.icon-email:before {
-    content: "\e66f";
+.icon-QQ1:before {
+  content: "\e882";
+}
+
+.icon-email1:before {
+  content: "\e66f";
 }
 
 .icon-weixin:before {
-    content: "\e8bb";
+  content: "\e8bb";
 }
 
 .icon-phone:before {
-    content: "\e743";
+  content: "\e743";
 }
 
 .icon-edit:before {
-    content: "\e839";
+  content: "\e839";
 }
